service.yml
apiVersion: v1
kind: Service
metadata:
  name: student-workflow-service
spec:
  selector:
    app: student-workflow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000  # FastAPI uygulamanın çalıştığı port
  type: LoadBalancer  # Dışarıdan erişim için LoadBalancer türü kullanılıyor
