ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-workflow-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-workflow-service
            port:
              number: 80
